--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <button id="play-music-button" onclick="document.getElementById('bg-music').play(); this.style.display='none';">
           Putar Musik
         </button>
-        <img id="foto" src="masadepan.png" alt="Breka Quote" />
+        <img id="foto" src="masa-depan.png" alt="Breka Quote" />
         <div id="myPopup" class="popup">
           <span class="close">&times;</span>
           <a id="downloadLink" class="download-btn" download>Download</a>
@@ -58,5 +58,6 @@
 
 
 </html>
+
 
 
