--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <section class="content">
       <div class="media fade-in">
-        <audio id="bg-music" src="musik-masa_depan.mp3" loop></audio>
+        <audio id="bg-music" src="musik-future.mp3" loop></audio>
         <button id="play-music-button" onclick="document.getElementById('bg-music').play(); this.style.display='none';">
           Putar Musik
         </button>
@@ -50,6 +50,7 @@
 
 
 </html>
+
 
 
 
